Build file correction